[tool.poetry]
name = "sdf-castle"
version = "0.1.0"
description = ""
authors = ["Two Faced Janus <blcklptn@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
moderngl = "^5.12.0"
moderngl-window = "^3.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
